# personnelAPI/src/controllers/department.controller.js
@@ -4,6 +4,18 @@ const Department=require('../models/department.model')
 
 module.exports={
     list: async (req,res)=>{
+        /*
+            #swagger.tags = ["Departments"]
+            #swagger.summary = "List Departments"
+            #swagger.description = `
+                You can send query with endpoint for search[], sort[], page and limit.
+                <ul> Examples:
+                    <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                    <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
+                    <li>URL/?<b>page=2&limit=1</b></li>
+                </ul>
+            `
+        */
         const data = await res.getModelList(Department)
         res.status(200).send({
             //isLogin:req.isLogin,
@@ -15,6 +27,17 @@ module.exports={
     },
     
     create: async (req,res)=>{
+        /*
+            #swagger.tags = ["Departments"]
+            #swagger.summary = "Create Department"
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    name: 'Test Department'
+                }
+            }
+        */
         const data=await Department.create(req.body)
         res.status(201).send({
             error:false,
@@ -23,6 +46,10 @@ module.exports={
 
     },
     read: async (req,res)=>{
+        /*
+            #swagger.tags = ["Departments"]
+            #swagger.summary = "Get Single Department"
+        */
         const data = await Department.findOne({_id:req.params.id})
         res.status(200).send({
             error:false,
@@ -31,6 +58,17 @@ module.exports={
 
     },
     update: async (req,res)=>{
+         /*
+            #swagger.tags = ["Departments"]
+            #swagger.summary = "Update Department"
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    name: 'Test Department'
+                }
+            }
+        */
         const data = await Department.updateOne({_id:req.params.id},req.body)
         res.status(202).send({
             error:false,
@@ -40,6 +78,10 @@ module.exports={
 
     },
     delete: async (req,res)=>{
+         /*
+            #swagger.tags = ["Departments"]
+            #swagger.summary = "Delete Department"
+        */
         const data = await Department.deleteOne({_id:req.params.id})
         
         res.status(data.deletedCount ? 204 : 404).send({
@@ -49,6 +91,11 @@ module.exports={
 
     },
     personnels: async (req,res)=>{
+        /*
+            #swagger.tags = ["Departments"]
+            #swagger.summary = "Get Personnels of any Department"
+        */
+
         const Personnel =require('../models/personnel.model')
         const data = await res.getModelList(Personnel,{departmentId:req.params.id},'departmentId')
         res.status(200).send({
