# personnelAPI/src/controllers/personnel.controller.js
@@ -4,6 +4,18 @@ const Personnel=require('../models/personnel.model')
 
 module.exports={
     list: async (req,res)=>{
+          /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "List Personnels"
+            #swagger.description = `
+                You can send query with endpoint for search[], sort[], page and limit.
+                <ul> Examples:
+                    <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                    <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
+                    <li>URL/?<b>page=2&limit=1</b></li>
+                </ul>
+            `
+        */
         const data = await res.getModelList(Personnel,{},'departmentId')
         res.status(200).send({
             error:false,
@@ -13,6 +25,18 @@ module.exports={
 
     },
     create: async (req,res)=>{
+         /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "Create Personnel"
+            #swagger.description = "Look to <b>'Models/Personnel'</b> for parameters."
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: 'true',
+                schema: {
+                    $ref: '#/definitions/Personnel'
+                }
+            }
+        */
         const isLead=req.body?.isLead || false
         if(isLead){
             await Personnel.updateMany({departmentId:req.body.departmentId,isLead:true},{isLead:false})
@@ -25,6 +49,10 @@ module.exports={
 
     },
     read: async (req,res)=>{
+         /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "Get Single Personnel"
+        */
         const data = await Personnel.findOne({_id:req.params.id})
         res.status(200).send({
             error:false,
@@ -33,6 +61,18 @@ module.exports={
 
     },
     update: async (req,res)=>{
+         /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "Update Personnel"
+            #swagger.description = "Look to <b>'Models/Personnel'</b> for parameters."
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: 'true',
+                schema: {
+                    $ref: '#/definitions/Personnel'
+                }
+            }
+        */
         const isLead=req.body?.isLead || false
         if(isLead){
             const {departmentId} = await Personnel.findOne({_id:req.params.id},{departmentId:1})
@@ -47,6 +87,10 @@ module.exports={
 
     },
     delete: async (req,res)=>{
+         /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "Delete Personnel"
+        */
         const data = await Personnel.deleteOne({_id:req.params.id})
         
         res.status(data.deletedCount ? 204 : 404).send({
