# personnelAPI/src/models/personnel.model.js
@@ -16,6 +16,8 @@ const PersonnelSchema=new mongoose.Schema({
         trim:true,
         required:true,
         unique:true,
+        dataType:'string',
+        exampleUsing:"'username': 'test'"
     },
     password:{
         type:String,
