# personnelAPI/swagger.js
@@ -1,39 +1,66 @@
-"use strict";
+"use strict"
 
-require("dotenv");
-const HOST = process.env?.HOST || "127.0.0.1";
-const PORT = process.env?.PORT || 8000;
-const swaggerAutogen = require("swagger-autogen")();
-const packageJson = require("./package.json");
+require('dotenv').config()
+const HOST = process.env?.HOST || '127.0.0.1'
+const PORT = process.env?.PORT || 8000
+
+const swaggerAutogen = require('swagger-autogen')()
+const packageJson = require('./package.json')
+
 const document = {
+	
 	info: {
 		version: packageJson.version,
 		title: packageJson.title,
 		description: packageJson.description,
 		termsOfService: "http://www.clarusway.com",
-		contact: {
-			name: packageJson.author,
-			email: "qadir@clarusway.com",
-		},
-		license: {
-			name: packageJson.license,
-		},
+		contact: { name: packageJson.author, email: "qadir@clarusway.com" },
+		license: { name: packageJson.license, },
 	},
 	host: `${HOST}:${PORT}`,
-	basePath: "/",
-	schemes: ["http", "https"],
-    securityDefinitions:{
-        JWT:{
-            type:"apiKey",
-            in:'header',
-            name:'Authorization',
-            description:'Entry Your AccessToken (JWT) for Login. Example:<b>Bearer <i>...token...</i></b>'
-        }
-    },
-    security:[{"JWT":true}],
+	basePath: '/',
+	schemes: ['http', 'https'],
+	// JWT Settings:
+	securityDefinitions: {
+		JWT: {
+			type: 'apiKey',
+			in: 'header',
+			name: 'Authorization',
+			description: 'Entry Your AccessToken (JWT) for Login. Example: <b>Bearer <i>...token...<i></b>'
+		}
+	},
+	security: [{ "JWT": true }],
+	definition: {
+		"/auth/login": {
+			username: {
+				type: "String",
+				required: true
+			},
+			password: {
+				type: "String",
+				required: true
+			},
+		},
+		"/auth/refresh": {
+			"token.refresh": {
+				description: "{ token: { refresh: ... } }",
+				type: "String",
+				required: true
+			}
+		},
+		// "Department": {
+		// 	"name": {
+		// 		type: "ObjectId",
+		// 		required: true
+		// 	}
+		// },
+		"Department": require('./src/models/department.model').schema.obj,
+		"Personnel": require('./src/models/personnel.model').schema.obj,
+	}
 };
 
-const routes=['./index.js']
-const outputFile='./swagger.json'
+const routes = ['./index.js']
+const outputFile = './swagger.json'
 
-swaggerAutogen(outputFile,routes,document)
+// Create JSON file:
+swaggerAutogen(outputFile, routes, document)
